--- a/joine-admin/src/main/resources/templates/system/dept/dept.html
+++ b/joine-admin/src/main/resources/templates/system/dept/dept.html
@@ -93,15 +93,15 @@
 		            title: '操作',
 		            align: 'left',
 		            formatter: function(value, row, index) {
-		                if (row.parentId != 0) {
-		                    var actions = [];
-                            actions.push('<a class="' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.deptId + '\')"><i class="fa fa-edit"></i>编辑</a>');
-                            actions.push('<a class="' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.deptId + '\')"><i class="fa fa-trash"></i>删除</a>');
-                            actions.push('<a class="' + addFlag + '" href="javascript:void(0)" onclick="$.operate.add(\'' + row.deptId + '\')"><i class="fa fa-plus"></i>添加下级部门</a>');
-                            return $.table.dropdownToggle(actions.join(''));
-		                } else {
-		                    return "";
-		                }
+                        if (row.parentId != 0) {
+                            var actions = [];
+                            actions.push('<a class="btn btn-info btn-xs ' + editFlag + '" href="javascript:void(0)" onclick="$.operate.edit(\'' + row.deptId + '\')"><i class="fa fa-edit"></i>编辑</a> ');
+                            actions.push('<a class="btn btn-info  btn-xs ' + addFlag + '" href="javascript:void(0)" onclick="$.operate.add(\'' + row.deptId + '\')"><i class="fa fa-plus"></i>新增下级</a> ');
+                            actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="javascript:void(0)" onclick="$.operate.remove(\'' + row.deptId + '\')"><i class="fa fa-trash"></i>删除</a>');
+                            return actions.join('');
+                        } else {
+                            return "";
+                        }
 		            }
 		        }]
 		    };
