国际化资源补全, 样式优化, js增强, 新增增减集List

--- a/joine-admin/src/main/resources/static/css/style.css
+++ b/joine-admin/src/main/resources/static/css/style.css
@@ -335,7 +335,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 
 .navbar-default .special_link a {
-    background: #1ab394;
+    background: #23c6c8;
     color: white;
 }
 
@@ -346,7 +346,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 
 .navbar-default .special_link a span.label {
     background: #fff;
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .navbar-default .landing_link a {
@@ -355,7 +355,7 @@ body.mini-navbar .navbar-default .nav > li > .nav-second-level li a {
 }
 
 .navbar-default .landing_link a:hover {
-    background: #1ab394 !important;
+    background: #23c6c8 !important;
     color: white;
 }
 
@@ -428,7 +428,7 @@ body.canvas-menu .logo-element {
 
 body.mini-navbar .nav-header {
     padding: 0;
-    background-color: #1ab394;
+    background-color: #23c6c8;
 }
 
 body.canvas-menu .nav-header {
@@ -542,7 +542,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 
 .top-navigation .navbar-nav .dropdown-menu > .active > a {
     background: white;
-    color: #1ab394;
+    color: #23c6c8;
     font-weight: bold;
 }
 
@@ -561,7 +561,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 
 .top-navigation .nav > li a:hover, .top-navigation .nav > li a:focus {
     background: #fff;
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .top-navigation .nav > li.active {
@@ -570,7 +570,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .top-navigation .nav > li.active > a {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .top-navigation .navbar-right {
@@ -592,7 +592,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .top-navigation .navbar-brand {
-    background: #1ab394;
+    background: #23c6c8;
     color: #fff;
     padding: 15px 25px;
 }
@@ -622,7 +622,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .navbar-toggle {
-    background-color: #1ab394;
+    background-color: #23c6c8;
     color: #fff;
     padding: 6px 12px;
     font-size: 14px;
@@ -678,7 +678,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .btn-primary.btn-outline {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .btn-success.btn-outline {
@@ -702,8 +702,8 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .btn-primary {
-    background-color: #1ab394;
-    border-color: #1ab394;
+    background-color: #23c6c8;
+    border-color: #23c6c8;
     color: #FFFFFF;
 }
 
@@ -832,7 +832,7 @@ body.canvas-menu.mini-navbar nav.navbar-static-side {
 }
 
 .btn-link:hover, .btn-link:focus, .btn-link:active, .btn-link.active, .open .dropdown-toggle.btn-link {
-    color: #1ab394;
+    color: #23c6c8;
     text-decoration: none;
 }
 
@@ -990,7 +990,7 @@ button.dim:active:before {
 }
 
 .label-primary, .badge-primary {
-    background-color: #1ab394;
+    background-color: #23c6c8;
     color: #FFFFFF;
 }
 
@@ -1051,7 +1051,7 @@ button.dim:active:before {
     display: block;
     overflow: hidden;
     cursor: pointer;
-    border: 2px solid #1ab394;
+    border: 2px solid #23c6c8;
     border-radius: 2px;
 }
 
@@ -1078,7 +1078,7 @@ button.dim:active:before {
 .onoffswitch-inner:before {
     content: "ON";
     padding-left: 10px;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     color: #FFFFFF;
 }
 
@@ -1094,7 +1094,7 @@ button.dim:active:before {
     width: 20px;
     margin: 0px;
     background: #FFFFFF;
-    border: 2px solid #1ab394;
+    border: 2px solid #23c6c8;
     border-radius: 2px;
     position: absolute;
     top: 0;
@@ -1246,8 +1246,8 @@ button.dim:active:before {
 }
 
 .fc-state-active {
-    background-color: #1ab394;
-    border-color: #1ab394;
+    background-color: #23c6c8;
+    border-color: #23c6c8;
     color: #ffffff;
 }
 
@@ -1283,9 +1283,9 @@ button.dim:active:before {
 
 .fc-event, .fc-agenda .fc-event-time, .fc-event a {
     padding: 4px 6px;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     /* background color */
-    border-color: #1ab394;
+    border-color: #23c6c8;
     /* border color */
 }
 
@@ -1399,8 +1399,8 @@ button.dim:active:before {
 
 /* LIST GROUP */
 a.list-group-item.active, a.list-group-item.active:hover, a.list-group-item.active:focus {
-    background-color: #1ab394;
-    border-color: #1ab394;
+    background-color: #23c6c8;
+    border-color: #23c6c8;
     color: #FFFFFF;
     z-index: 2;
 }
@@ -1691,7 +1691,7 @@ table.dataTable thead .sorting:after {
 }
 
 .pace .pace-progress {
-    background: #1ab394;
+    background: #23c6c8;
     position: fixed;
     z-index: 2000;
     top: 0;
@@ -1846,11 +1846,11 @@ table.dataTable thead .sorting:after {
 }
 
 .form-control:focus, .single-line:focus {
-    border-color: #1ab394 !important;
+    border-color: #23c6c8 !important;
 }
 
 .has-success .form-control {
-    border-color: #1ab394;
+    border-color: #23c6c8;
 }
 
 .has-warning .form-control {
@@ -1862,7 +1862,7 @@ table.dataTable thead .sorting:after {
 }
 
 .has-success .control-label {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .has-warning .control-label {
@@ -1894,7 +1894,7 @@ table.dataTable thead .sorting:after {
 }
 
 .noUi-connect {
-    background: none repeat scroll 0 0 #1ab394;
+    background: none repeat scroll 0 0 #23c6c8;
     box-shadow: none;
 }
 
@@ -2071,7 +2071,7 @@ table.dataTable thead .sorting:after {
     display: block;
     overflow: hidden;
     cursor: pointer;
-    border: 2px solid #1AB394;
+    border: 2px solid #23c6c8;
     border-radius: 3px;
 }
 
@@ -2100,7 +2100,7 @@ table.dataTable thead .sorting:after {
 .onoffswitch-inner:before {
     content: "ON";
     padding-left: 7px;
-    background-color: #1AB394;
+    background-color: #23c6c8;
     color: #FFFFFF;
 }
 
@@ -2117,7 +2117,7 @@ table.dataTable thead .sorting:after {
     width: 18px;
     margin: 0px;
     background: #FFFFFF;
-    border: 2px solid #1AB394;
+    border: 2px solid #23c6c8;
     border-radius: 3px;
     position: absolute;
     top: 0;
@@ -2421,11 +2421,11 @@ table.dataTable thead .sorting:after {
 }
 
 .toast {
-    background-color: #1ab394;
+    background-color: #23c6c8;
 }
 
 .toast-success {
-    background-color: #1ab394;
+    background-color: #23c6c8;
 }
 
 .toast-error {
@@ -2583,11 +2583,11 @@ a.forum-item-title:hover {
 }
 
 .forum-item.active .fa {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .forum-item.active a.forum-item-title {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 @media ( max-width: 992px) {
@@ -2783,7 +2783,7 @@ a.forum-item-title:hover {
 }
 
 .vertical-date small {
-    color: #1ab394;
+    color: #23c6c8;
     font-weight: 400;
 }
 
@@ -3533,7 +3533,7 @@ img.circle-border {
     font-weight: 600;
     padding: 17px 20px;
     text-align: center;
-    background-color: #1ab394;
+    background-color: #23c6c8;
 }
 
 .login-panel {
@@ -3774,7 +3774,7 @@ table.table-mail tr td {
 }
 
 .navy-bg {
-    background-color: #1ab394;
+    background-color: #23c6c8;
     color: #ffffff;
 }
 
@@ -3803,12 +3803,12 @@ table.table-mail tr td {
 }
 
 .panel-primary {
-    border-color: #1ab394;
+    border-color: #23c6c8;
 }
 
 .panel-primary > .panel-heading {
-    background-color: #1ab394;
-    border-color: #1ab394;
+    background-color: #23c6c8;
+    border-color: #23c6c8;
 }
 
 .panel-success {
@@ -3852,7 +3852,7 @@ table.table-mail tr td {
 }
 
 .progress-bar {
-    background-color: #1ab394;
+    background-color: #23c6c8;
 }
 
 .progress-small, .progress-small .progress-bar {
@@ -3903,7 +3903,7 @@ table.table-mail tr td {
 
 /* COLORS */
 .text-navy {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .text-primary {
@@ -4663,7 +4663,7 @@ ul.notes li div {
 }
 
 .category-list li a .text-navy {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 .category-list li a .text-primary {
@@ -4950,7 +4950,7 @@ dd.project-people {
 .faq-question {
     font-size: 18px;
     font-weight: 600;
-    color: #1ab394;
+    color: #23c6c8;
     display: block;
 }
 
@@ -5196,7 +5196,7 @@ dd.project-people {
 
 /* ISSUE TRACKER */
 .issue-tracker .btn-link {
-    color: #1ab394;
+    color: #23c6c8;
 }
 
 table.issue-tracker tbody tr td {
@@ -5264,7 +5264,7 @@ table.issue-tracker tbody tr td {
 }
 
 .agile-list li.success-element {
-    border-left: 3px solid #1ab394;
+    border-left: 3px solid #23c6c8;
 }
 
 .agile-detail {
@@ -5299,7 +5299,7 @@ del {
     height: 38px;
     width: 38px;
     display: block;
-    background: #1ab394;
+    background: #23c6c8;
     padding: 9px 8px;
     text-align: center;
     color: #fff;
@@ -5308,7 +5308,7 @@ del {
 
 .open-small-chat:hover {
     color: white;
-    background: #1ab394;
+    background: #23c6c8;
 }
 
 .small-chat-box {
@@ -5374,7 +5374,7 @@ del {
 }
 
 .small-chat-box .content .chat-message.active {
-    background: #1ab394;
+    background: #23c6c8;
     color: #fff;
 }
 
@@ -5409,7 +5409,7 @@ del {
 .sk-spinner-rotating-plane.sk-spinner {
     width: 30px;
     height: 30px;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     margin: 0 auto;
     -webkit-animation: sk-rotatePlane 1.2s infinite ease-in-out;
     animation: sk-rotatePlane 1.2s infinite ease-in-out;
@@ -5469,7 +5469,7 @@ del {
     width: 100%;
     height: 100%;
     border-radius: 50%;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     opacity: 0.6;
     position: absolute;
     top: 0;
@@ -5528,7 +5528,7 @@ del {
 }
 
 .sk-spinner-wave div {
-    background-color: #1ab394;
+    background-color: #23c6c8;
     height: 100%;
     width: 6px;
     display: inline-block;
@@ -5597,7 +5597,7 @@ del {
 }
 
 .sk-spinner-wandering-cubes .sk-cube1, .sk-spinner-wandering-cubes .sk-cube2 {
-    background-color: #1ab394;
+    background-color: #23c6c8;
     width: 10px;
     height: 10px;
     position: absolute;
@@ -5678,7 +5678,7 @@ del {
     width: 40px;
     height: 40px;
     margin: 0 auto;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     border-radius: 100%;
     -webkit-animation: sk-pulseScaleOut 1s infinite ease-in-out;
     animation: sk-pulseScaleOut 1s infinite ease-in-out;
@@ -5735,7 +5735,7 @@ del {
     display: inline-block;
     position: absolute;
     top: 0;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     border-radius: 100%;
     -webkit-animation: sk-chasingDotsBounce 2s infinite ease-in-out;
     animation: sk-chasingDotsBounce 2s infinite ease-in-out;
@@ -5805,7 +5805,7 @@ del {
 .sk-spinner-three-bounce div {
     width: 18px;
     height: 18px;
-    background-color: #1ab394;
+    background-color: #23c6c8;
     border-radius: 100%;
     display: inline-block;
     -webkit-animation: sk-threeBounceDelay 1.4s infinite ease-in-out;
