--- a/joine-admin/src/main/resources/templates/index.html
+++ b/joine-admin/src/main/resources/templates/index.html
@@ -59,7 +59,7 @@
                 </li>
                 <li th:each="menu : ${menus}">
                     <a href="#">
-                        <i class="fa fa fa-bar-chart-o" th:class="${menu.icon}"></i>
+                        <i class="fa fa-bar-chart-o" th:class="${menu.icon}"></i>
                         <span class="nav-label" th:text="${menu.menuName}">一级菜单</span>
                         <span class="fa arrow"></span>
                     </a>
@@ -97,7 +97,7 @@
                     <!--</li>-->
                     <!--<li><a id="fullScreen"><i class="fa fa-arrows-alt"></i>全屏</a></li>-->
                     <!--<li><a th:href="@{logout}"><i class="fa fa-sign-out"></i>退出</a></li>-->
-                    <li><a title="全屏显示" id="fullScreen"><i class="fa fa-arrows-alt"></i> 全屏显示</a></li>
+                    <li><a title="全屏显示" href="javascript:void(0)" id="fullScreen"><i class="fa fa-arrows-alt"></i> 全屏显示</a></li>
                     <li class="dropdown user-menu">
                         <a href="javascript:void(0)" class="dropdown-toggle" data-hover="dropdown">
                             <img th:src="(${user.avatar} == '') ? @{/img/profile.png} : @{/profile/avatar/} + ${user.avatar}"
@@ -135,17 +135,6 @@
             <button class="roll-nav roll-right tabRight">
                 <i class="fa fa-forward"></i>
             </button>
-            <div class="btn-group roll-nav roll-right">
-                <button class="dropdown J_tabClose" data-toggle="dropdown">
-                    页签操作<span class="caret"></span>
-                </button>
-                <ul role="menu" class="dropdown-menu dropdown-menu-right">
-                    <li><a class="tabCloseCurrent" href="javascript:void();">关闭当前</a></li>
-                    <li><a class="tabCloseOther" href="javascript:void();">关闭其他</a></li>
-                    <li><a class="tabCloseAll" href="javascript:void();">全部关闭</a></li>
-                    <li><a class="tabMaxCurrent" href="javascript:void();">全屏显示</a></li>
-                </ul>
-            </div>
             <a href="#" class="roll-nav roll-right tabReload"><i class="fa fa-refresh"></i> 刷新</a>
         </div>
 
