--- a/joine-admin/src/main/resources/templates/monitor/online/online.html
+++ b/joine-admin/src/main/resources/templates/monitor/online/online.html
@@ -46,6 +46,7 @@
 
     $(function () {
         var options = {
+            uniqueId: "sessionId",
             url: prefix + "/list",
             exportUrl: prefix + "/export",
             sortName: "lastAccessTime",
