--- a/joine-admin/src/main/resources/templates/system/role/authUser.html
+++ b/joine-admin/src/main/resources/templates/system/role/authUser.html
@@ -18,8 +18,8 @@
                             手机号码：<input type="text" name="phonenumber"/>
                         </li>
                         <li>
-                            <a class="btn btn-primary btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
-                            <a class="btn btn-warning btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
+                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.table.search()"><i class="fa fa-search"></i>&nbsp;搜索</a>
+                            <a class="btn btn-info btn-rounded btn-sm" onclick="$.form.reset()"><i class="fa fa-refresh"></i>&nbsp;重置</a>
                         </li>
                     </ul>
                 </div>
@@ -27,13 +27,13 @@
         </div>
 
         <div class="btn-group-sm" id="toolbar" role="group">
-            <a class="btn btn-success" onclick="selectUser()" shiro:hasPermission="system:role:add">
+            <a class="btn btn-info" onclick="selectUser()" shiro:hasPermission="system:role:add">
                 <i class="fa fa-plus"></i> 添加用户
             </a>
             <a class="btn btn-danger btn-del disabled" onclick="cancelAuthUserAll()" shiro:hasPermission="system:role:remove">
                 <i class="fa fa-remove"></i> 批量取消授权
             </a>
-            <a class="btn btn-warning" onclick="closeItem()">
+            <a class="btn btn-danger" onclick="closeItem()">
                 <i class="fa fa-reply-all"></i> 关闭
             </a>
         </div>
