--- a/joine-admin/src/main/resources/templates/main.html
+++ b/joine-admin/src/main/resources/templates/main.html
@@ -40,7 +40,7 @@
                 <li>安全框架：Apache Shiro。</li>
                 <li>模板引擎：Thymeleaf。</li>
                 <li>持久层框架：MyBatis。</li>
-				<li>定时任务:Quartz。</li>
+				<li>定时任务：Quartz。</li>
                 <li>数据库连接池：Druid。</li>
                 <li>工具类：Fastjson。</li>
                 <li>更多……</li>
