--- a/joine-generator/src/main/resources/vm/java/domain.java.vm
+++ b/joine-generator/src/main/resources/vm/java/domain.java.vm
@@ -45,7 +45,7 @@ public class ${className} extends BaseEntity {
 	}
 #end
 #end
-
+	@Override
     public String toString() {
         return new ToStringBuilder(this,ToStringStyle.MULTI_LINE_STYLE)
 #foreach ($column in $columns)
