增加上传控件

--- a/joine-admin/src/main/resources/templates/include.html
+++ b/joine-admin/src/main/resources/templates/include.html
@@ -102,6 +102,14 @@
 	<script th:src="@{/ajax/libs/cropbox/cropbox.js}"></script>
 </div>
 
+<!-- jasny功能扩展插件 -->
+<div th:fragment="jasny-bootstrap-css">
+	<link th:href="@{/ajax/libs/jasny/jasny-bootstrap.min.css}" rel="stylesheet"/>
+</div>
+<div th:fragment="jasny-bootstrap-js">
+	<script th:src="@{/ajax/libs/jasny/jasny-bootstrap.min.js}"></script>
+</div>
+
 <!-- jsonview格式化和语法高亮JSON格式数据查看插件 -->
 <div th:fragment="jsonview-css">
 	<link th:href="@{/ajax/libs/jsonview/jquery.jsonview.css}" rel="stylesheet"/>
