--- a/joine-generator/src/main/resources/vm/java/Controller.java.vm
+++ b/joine-generator/src/main/resources/vm/java/Controller.java.vm
@@ -1,6 +1,7 @@
 package ${basePackage}.web.controller.${moduleName};
 
 import java.util.List;
+import com.github.joine.framework.util.ShiroUtils;
 import org.apache.shiro.authz.annotation.RequiresPermissions;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -81,6 +82,8 @@ public class ${className}Controller extends BaseController {
 	@PostMapping("/add")
 	@ResponseBody
 	public ResponseResult addSave(${className} ${classname}) {
+        ${classname}.setCreateBy(ShiroUtils.getLoginName());
+        ${classname}.setUpdateBy(ShiroUtils.getLoginName());
 		return toAjax(${classname}Service.insert${className}(${classname}));
 	}
 
@@ -102,6 +105,7 @@ public class ${className}Controller extends BaseController {
 	@PostMapping("/edit")
 	@ResponseBody
 	public ResponseResult editSave(${className} ${classname}) {
+	    ${classname}.setUpdateBy(ShiroUtils.getLoginName());
 		return toAjax(${classname}Service.update${className}(${classname}));
 	}
 	
