--- a/joine-admin/src/main/resources/templates/system/post/post.html
+++ b/joine-admin/src/main/resources/templates/system/post/post.html
@@ -51,7 +51,7 @@
 			</div>
 		</div>
 	</div>
-	<div th:include="include :: footer"></div>
+	<th:block th:include="include :: footer" />
 	<script th:inline="javascript">
 		var editFlag = [[${@permission.hasPermi('system:post:edit')}]];
 		var removeFlag = [[${@permission.hasPermi('system:post:remove')}]];
