--- a/joine-generator/src/main/resources/templates/tool/gen/gen.html
+++ b/joine-generator/src/main/resources/templates/tool/gen/gen.html
@@ -46,7 +46,7 @@
         </div>
     </div>
 </div>
-<div th:include="include :: footer"></div>
+<th:block th:include="include :: footer" />
 <script type="text/javascript">
     var prefix = ctx + "tool/gen";
 
