--- a/joine-generator/src/main/resources/vm/html/list.html.vm
+++ b/joine-generator/src/main/resources/vm/html/list.html.vm
@@ -63,7 +63,7 @@
 			</div>
 		</div>
 	</div>
-    <div th:include="include :: footer"></div>
+    <th:block th:include="include :: footer" />
     <script th:inline="javascript">
         var editFlag = [[${@permission.hasPermi('${moduleName}:${classname}:edit')}]];
         var removeFlag = [[${@permission.hasPermi('${moduleName}:${classname}:remove')}]];
