--- a/joine-admin/src/main/resources/templates/system/dict/type/type.html
+++ b/joine-admin/src/main/resources/templates/system/dict/type/type.html
@@ -57,7 +57,7 @@
 			</div>
 		</div>
 	</div>
-	<div th:include="include :: footer"></div>
+	<th:block th:include="include :: footer" />
 	<script th:inline="javascript">
 		var editFlag = [[${@permission.hasPermi('system:dict:edit')}]];
 		var listFlag = [[${@permission.hasPermi('system:dict:list')}]];
