--- a/joine-admin/src/main/resources/templates/system/role/role.html
+++ b/joine-admin/src/main/resources/templates/system/role/role.html
@@ -63,7 +63,7 @@
         </div>
     </div>
 </div>
-<div th:include="include :: footer"></div>
+<th:block th:include="include :: footer" />
 <script th:inline="javascript">
     var editFlag = [[${@permission.hasPermi('system:role:edit')}]];
     var removeFlag = [[${@permission.hasPermi('system:role:remove')}]];
