--- a/joine-quartz/src/main/resources/templates/monitor/job/jobLog.html
+++ b/joine-quartz/src/main/resources/templates/monitor/job/jobLog.html
@@ -55,7 +55,7 @@
 			</div>
 		</div>
 	</div>
-	<div th:include="include :: footer"></div>
+	<th:block th:include="include :: footer" />
 	<script th:inline="javascript">
 		var detailFlag = [[${@permission.hasPermi('monitor:job:detail')}]];
 		var datas = [[${@dict.getType('sys_common_status')}]];
