--- a/joine-admin/src/main/resources/templates/login.html
+++ b/joine-admin/src/main/resources/templates/login.html
@@ -47,14 +47,14 @@
 				    </div>
                     <button class="btn btn-info btn-block" id="btnSubmit" data-loading="正在验证登录，请稍后...">登录</button>
                     <br>
-                    <strong>还没有账号？ <a href="#">立即注册&raquo;</a></strong>
+                    <!--<strong>还没有账号？ <a href="#">立即注册&raquo;</a></strong>-->
                 </form>
             </div>
         </div>
         <div class="signup-footer">
             <div class="pull-left" style="width: 100%;text-align: center">
                 &copy; 2019 All Rights Reserved. Joine <br>
-                <a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">辽ICP备18001372号</a><br>
+                <!--<a href="http://www.miitbeian.gov.cn/" target="_blank" rel="nofollow">辽ICP备18001372号</a><br>-->
             </div>
         </div>
     </div>
