--- a/joine-admin/src/main/resources/templates/system/user/add.html
+++ b/joine-admin/src/main/resources/templates/system/user/add.html
@@ -61,7 +61,7 @@
                     <div class="form-group">
                         <label class="col-sm-4 control-label"><span style="color: red; ">*</span>登录密码：</label>
                         <div class="col-sm-8">
-                            <input name="password" placeholder="请输入登录密码" autocomplete="off" class="form-control" type="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
+                            <input name="password" placeholder="请输入登录密码" autocomplete="new-password" class="form-control" type="password" th:value="${@config.getKey('sys.user.initPassword')}" required>
                         </div>
                     </div>
                 </div>
